# cpp_craft_1013

solutions/aleks_apalikov/Craft_7/: CMakeLists.txt  _gcc_gen.sh  _msvc_gen_2005_64.bat  _msvc_gen_2008_32.bat  _msvc_gen_2010_64.bat
solutions/aleks_apalikov/Craft_7/sources/data/: 1.udp  2.udp  233.200.79.1.udp  233.200.79.128.udp  config.ini  minut_dat.udp  out
solutions/aleks_apalikov/Craft_7/sources/data_collector/: main.cpp  main.h
solutions/aleks_apalikov/Craft_7/sources/minute_calculator/: CMakeLists.txt  minute_calculator.cpp  minute_calculator.h
solutions/aleks_apalikov/Craft_7/sources/minute_market_data/: CMakeLists.txt  minute_market_data.h  thread_safe_queue.cpp  thread_safe_queue.h
solutions/aleks_apalikov/Craft_7/sources/multicast_communication/: CMakeLists.txt  Stock_receiver.cpp  Stock_receiver.cpp.PVS-Studio.cfg  Stock_receiver.h  config.h  market_data_processor.cpp  message_parser.cpp  message_parser.h  minute_calculator.cpp  udp_listener.h  (+5 more)
solutions/max_kaskevich/6/: CMakeLists.txt  _msvc_gen_2012_64.bat
solutions/max_kaskevich/7/: CMakeLists.txt  _msvc_gen_2012_64.bat
solutions/max_kaskevich/7/_cmake_scripts/: Findmulticast_communication.cmake  utils.cmake
solutions/max_kaskevich/7/sources/minute_market_data/: CMakeLists.txt  minute_market_data.cpp  minute_market_data.h  task_engine.cpp  task_engine.h
solutions/max_kaskevich/7/sources/minute_market_data_receiver/: CMakeLists.txt  main.cpp
solutions/max_kaskevich/7/tests/minute_market_data_tests/: CMakeLists.txt  minute_market_data_tests.cpp  test_registrator.cpp  test_registrator.h
(+58 files in other folders)
